BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CartaCredito__c.field-meta.xml
<CustomField>
    <fullName>CRM_CartaCredito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carta di credito</label>
    <type>Checkbox</type>
</CustomField>