BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CartaDebito__c.field-meta.xml
<CustomField>
    <fullName>CRM_CartaDebito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carta di debito</label>
    <type>Checkbox</type>
</CustomField>