BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CBI__c.field-meta.xml
<CustomField>
    <fullName>CRM_CBI__c</fullName>
    <label>CBI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>