BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CertificatiDeposito__c.field-meta.xml
<CustomField>
    <fullName>CRM_CertificatiDeposito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificati deposito</label>
    <type>Checkbox</type>
</CustomField>