BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CessioneQuintoPrestMLT__c.field-meta.xml
<CustomField>
    <fullName>CRM_CessioneQuintoPrestMLT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cessione del quinto</label>
    <type>Checkbox</type>
</CustomField>