BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_ClienteMultiBancarizzato__c.field-meta.xml
<CustomField>
    <fullName>CRM_ClienteMultiBancarizzato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente multi-bancarizzato</label>
    <type>Checkbox</type>
</CustomField>