BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_ClusterPrestitiDigital__c.field-meta.xml
<CustomField>
    <fullName>CRM_ClusterPrestitiDigital__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cluster Prestiti Digital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>