BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_ContoCorrente__c.field-meta.xml
<CustomField>
    <fullName>CRM_ContoCorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conto corrente</label>
    <type>Checkbox</type>
</CustomField>