BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_ControvalorePTFAdeg__c.field-meta.xml
<CustomField>
    <fullName>CRM_ControvalorePTFAdeg__c</fullName>
    <label>Controvalore PTF Adeguatezza</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>