BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CR_CredPerCassaUtilMesePrec__c.field-meta.xml
<CustomField>
    <fullName>CRM_CR_CredPerCassaUtilMesePrec__c</fullName>
    <label>CR - Crediti per cassa Util mese prec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>