BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CredBrevTermBase__c.field-meta.xml
<CustomField>
    <fullName>CRM_CredBrevTermBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credito Breve Termine Base</label>
    <type>Checkbox</type>
</CustomField>