BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CredBrevTermComm__c.field-meta.xml
<CustomField>
    <fullName>CRM_CredBrevTermComm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credito Breve Termine Comm</label>
    <type>Checkbox</type>
</CustomField>