BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CreditRating__c.field-meta.xml
<CustomField>
    <fullName>CRM_CreditRating__c</fullName>
    <formula>CRM_Account__r.CRM_CreditRating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM_CreditRating</label>
    <type>Text</type>
</CustomField>