BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CredMedioLungoTerm__c.field-meta.xml
<CustomField>
    <fullName>CRM_CredMedioLungoTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credito Medio Lungo Termine</label>
    <type>Checkbox</type>
</CustomField>