BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CREntiSegnalanti10__c.field-meta.xml
<CustomField>
    <fullName>CRM_CREntiSegnalanti10__c</fullName>
    <label>Num. Enti segn. nel mese - Periodo 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>