BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CREntiSegnalantiMesePrec__c.field-meta.xml
<CustomField>
    <fullName>CRM_CREntiSegnalantiMesePrec__c</fullName>
    <label>Num. Enti segn. nel mese - mese preced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>