BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CRMeseDiRiferimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_CRMeseDiRiferimento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mese di Riferimento</label>
    <type>Date</type>
</CustomField>