BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CrossSellingABI__c.field-meta.xml
<CustomField>
    <fullName>CRM_CrossSellingABI__c</fullName>
    <label>Cross Selling ABI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>