BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CrossSellingABIFineAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_CrossSellingABIFineAP__c</fullName>
    <label>Cross-Selling ABI Fine AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>