BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_CrossSellingPonderato__c.field-meta.xml
<CustomField>
    <fullName>CRM_CrossSellingPonderato__c</fullName>
    <label>Cross Selling ponderato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>