BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Data_bilancio1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_bilancio1__c</fullName>
    <formula>TEXT( DAY(CRM_Periodo1__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Periodo1__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Periodo1__c))</formula>
    <label>Data bilancio 1</label>
    <type>Text</type>
</CustomField>