BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Data_bilancio2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_bilancio2__c</fullName>
    <formula>TEXT( DAY( CRM_Periodo2__c ))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Periodo2__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Periodo2__c))</formula>
    <label>Data bilancio 2</label>
    <type>Text</type>
</CustomField>