BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Data_bilancio3__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_bilancio3__c</fullName>
    <formula>TEXT( DAY(CRM_Periodo3__c))  
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Periodo3__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Periodo3__c))</formula>
    <label>Data bilancio 3</label>
    <type>Text</type>
</CustomField>