BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Data_rating_ufficiale__c.field-meta.xml
<CustomField>
    <fullName>CRM_Data_rating_ufficiale__c</fullName>
    <formula>&quot;Data scadenza: &quot; &amp; 
IF(
AND(
DAY(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c) &lt;= 9,
MONTH(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c)),
IF(
DAY(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c)),
IF(
MONTH(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c) &lt;= 9,
TEXT( DAY(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c)),
TEXT( DAY(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataScadenzaRatingUffCRM__c))
)))</formula>
    <label>Data scadenza rating ufficiale</label>
    <type>Text</type>
</CustomField>