BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggIndicEconRedd__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggIndicEconRedd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Agg Indic Econ Redd</label>
    <type>Date</type>
</CustomField>