BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggiornamentoStock__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggiornamentoStock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Aggiornamento Stock</label>
    <type>Date</type>
</CustomField>