BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggPA__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggPA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Aggiornamento PA</label>
    <type>Date</type>
</CustomField>