BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggPA_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggPA_Formula__c</fullName>
    <formula>IF(
AND(
DAY(CRM_DataAggPA__c) &lt;= 9,
MONTH(CRM_DataAggPA__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPA__c)),
IF(
DAY(CRM_DataAggPA__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPA__c)),
IF(
MONTH(CRM_DataAggPA__c) &lt;= 9,
TEXT( DAY(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPA__c)),
TEXT( DAY(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggPA__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPA__c))
)))</formula>
    <label>DataAggPA Formula</label>
    <type>Text</type>
</CustomField>