BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggPAGestionale__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggPAGestionale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Aggiornamento PA Gestionale</label>
    <type>Date</type>
</CustomField>