BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggPAGestionale_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggPAGestionale_Formula__c</fullName>
    <formula>IF(
AND(
DAY(CRM_DataAggPAGestionale__c) &lt;= 9,
MONTH(CRM_DataAggPAGestionale__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPAGestionale__c)),
IF(
DAY(CRM_DataAggPAGestionale__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPAGestionale__c)),
IF(
MONTH(CRM_DataAggPAGestionale__c) &lt;= 9,
TEXT( DAY(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPAGestionale__c)),
TEXT( DAY(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggPAGestionale__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggPAGestionale__c))
)))</formula>
    <label>DataAggPAGestionale Formula</label>
    <type>Text</type>
</CustomField>