BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggPD__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggPD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Aggiornamento PD</label>
    <type>Date</type>
</CustomField>