BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggRatingAnd__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggRatingAnd__c</fullName>
    <formula>IF(
AND(
DAY(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c) &lt;= 9,
MONTH(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c)),
IF(
DAY(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c)),
IF(
MONTH(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c) &lt;= 9,
TEXT( DAY(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c)),
TEXT( DAY(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_ReferencePeriodPerformanceRating__c))
)))</formula>
    <label>CRM_DataAggRatingAnd</label>
    <type>Text</type>
</CustomField>