BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggSegmRatingUff__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggSegmRatingUff__c</fullName>
    <formula>/*IF(
AND(
DAY(CRM_Account__r.CRM_DataAggSegmRatingUff__c) &lt;= 9,
MONTH(CRM_Account__r.CRM_DataAggSegmRatingUff__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmRatingUff__c)),
IF(
DAY(CRM_Account__r.CRM_DataAggSegmRatingUff__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmRatingUff__c)),
IF(
MONTH(CRM_Account__r.CRM_DataAggSegmRatingUff__c) &lt;= 9,
TEXT( DAY(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmRatingUff__c)),
TEXT( DAY(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmRatingUff__c))
)))*/
IF(
AND(
DAY(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c) &lt;= 9,
MONTH(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c)),
IF(
DAY(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c)),
IF(
MONTH(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c) &lt;= 9,
TEXT( DAY(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c)),
TEXT( DAY(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_Account__r.CRM_DataAggSegmentoRischioUff__c))
)))</formula>
    <label>CRM_DataAggSegmRatingUff</label>
    <type>Text</type>
</CustomField>