BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataAggSOWUtilBancaSist__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataAggSOWUtilBancaSist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data aggiornam. SOW Util Banca/Sistema</label>
    <type>Date</type>
</CustomField>