BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataControvalorePTFAdeg__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataControvalorePTFAdeg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Controvalore PTF Adeguatezza</label>
    <type>Date</type>
</CustomField>