BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataNDW__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataNDW__c</fullName>
    <formula>IF(
AND(
DAY(DATEVALUE(NDW_X_Update_TS__c)) &lt;= 9,
MONTH(DATEVALUE(NDW_X_Update_TS__c)) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(NDW_X_Update_TS__c))),
IF(
DAY(DATEVALUE(NDW_X_Update_TS__c)) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(NDW_X_Update_TS__c))),
IF(
MONTH(DATEVALUE(NDW_X_Update_TS__c)) &lt;= 9,
TEXT( DAY(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(NDW_X_Update_TS__c))),
TEXT( DAY(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(NDW_X_Update_TS__c)))
&amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(NDW_X_Update_TS__c)))
)))</formula>
    <label>Data NDW</label>
    <type>Text</type>
</CustomField>