BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataProssScad__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataProssScad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data prossima Scadenza</label>
    <type>Date</type>
</CustomField>