BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataTabellaStock__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataTabellaStock__c</fullName>
    <formula>&quot;dati al: &quot; &amp;
IF(
AND(
DAY(CRM_DataAggiornamentoStock__c) &lt;= 9,
MONTH(CRM_DataAggiornamentoStock__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggiornamentoStock__c)),
IF(
DAY(CRM_DataAggiornamentoStock__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggiornamentoStock__c)),
IF(
MONTH(CRM_DataAggiornamentoStock__c) &lt;= 9,
TEXT( DAY(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggiornamentoStock__c)),
TEXT( DAY(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggiornamentoStock__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggiornamentoStock__c))
)))</formula>
    <label>Data Tabella Stock</label>
    <type>Text</type>
</CustomField>