BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DataTabelle__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataTabelle__c</fullName>
    <formula>&quot;dati al: &quot; &amp;
IF(
AND(
DAY(CRM_DataAggIndicEconRedd__c) &lt;= 9,
MONTH(CRM_DataAggIndicEconRedd__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggIndicEconRedd__c)),
IF(
DAY(CRM_DataAggIndicEconRedd__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggIndicEconRedd__c)),
IF(
MONTH(CRM_DataAggIndicEconRedd__c) &lt;= 9,
TEXT( DAY(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggIndicEconRedd__c)),
TEXT( DAY(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_DataAggIndicEconRedd__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_DataAggIndicEconRedd__c))
)))</formula>
    <label>Data Tabelle</label>
    <type>Text</type>
</CustomField>