BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DatoAlCtvlAdegPTF__c.field-meta.xml
<CustomField>
    <fullName>CRM_DatoAlCtvlAdegPTF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dato Al (Controvalore adeguatezza PTF)</label>
    <type>Date</type>
</CustomField>