BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DepositiRisparmio__c.field-meta.xml
<CustomField>
    <fullName>CRM_DepositiRisparmio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depositi a risparmio</label>
    <type>Checkbox</type>
</CustomField>