BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DescrizioneBilancio__c.field-meta.xml
<CustomField>
    <fullName>CRM_DescrizioneBilancio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione Bilancio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>