BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_DiffMCVsSmAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_DiffMCVsSmAP__c</fullName>
    <formula>CRM_MargineIntermediazioneMeseCorrente__c - CRM_MargineIntermediazioneStessoMeseAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MINTER diff anno in corso VS sm AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>