BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Entrate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Entrate__c</fullName>
    <label>Entrate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>