BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_EsperienzaEConoscenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_EsperienzaEConoscenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Esperienza e Conoscenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>