BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Estero__c.field-meta.xml
<CustomField>
    <fullName>CRM_Estero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estero</label>
    <type>Checkbox</type>
</CustomField>