BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_F_PeriodoEntiSegnalanti10__c.field-meta.xml
<CustomField>
    <fullName>CRM_F_PeriodoEntiSegnalanti10__c</fullName>
    <formula>CASE(MONTH(CRM_PeriodoEntiSegnalanti10__c),
1, &quot;Gennaio&quot;,
2, &quot;Febbraio&quot;,
3, &quot;Marzo&quot;,
4, &quot;Aprile&quot;,
5, &quot;Maggio&quot;,
6, &quot;Giugno&quot;,
7, &quot;Luglio&quot;,
8, &quot;Agosto&quot;,
9, &quot;Settembre&quot;,
10, &quot;Ottobre&quot;,
11, &quot;Novembre&quot;, 
12, &quot;Dicembre&quot;, null)
&amp; &quot; &quot;
&amp; TEXT(YEAR(CRM_PeriodoEntiSegnalanti10__c))</formula>
    <label>CRM_F_PeriodoEntiSegnalanti10</label>
    <type>Text</type>
</CustomField>